parser/l5_parser.go
// Code generated from L5.g4 by ANTLR 4.13.1. DO NOT EDIT.

package parser // L5

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type L5Parser struct {
	*antlr.BaseParser
}

var L5ParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func l5ParserInit() {
	staticData := &L5ParserStaticData
	staticData.LiteralNames = []string{
		"", "'Pagina'", "'Cabecera'", "'Titulo'", "'FinTitulo'", "'FinCabecera'",
		"'Cuerpo'", "'FinCuerpo'", "'Ppagina'", "'FPpagina'", "'FinPagina'",
		"'Negrita'", "'FinNegrita'", "'Cursiva'", "'FinCursiva'", "'Subrayado'",
		"'FinSubrayado'", "'Tachado'", "'FinTachado'", "'Subindice'", "'FinSubindice'",
		"'Superindice'", "'FinSuperindice'", "'Tama\\u00F1o'", "'FinTama\\u00F1o'",
		"'Sangrado'", "'FinSangrado'", "'Parrafo'", "'FinParrafo'", "'Posicion'",
		"'FinPosicion'", "'Id'", "'FinId'", "'Clase'", "'FinClase'", "'Lista'",
		"'FinLista'", "'ElementoLista'", "'FinElementoLista'", "'Enlace'", "'FinEnlace'",
		"'Con'", "'FinCon'", "'Mostrar'", "'FinMostrar'", "'Imagen'", "'FinImagen'",
		"'Src'", "'FinSrc'", "'Alt'", "'FinAlt'", "'Encabezado'", "'FinEncabezado'",
		"'Linea'", "'Salto'", "'Estilo'", "'FinEstilo'",
	}
	staticData.SymbolicNames = []string{
		"", "PAGINA", "CABECERA", "TITULO", "FINTITULO", "FINCABECERA", "CUERPO",
		"FINCUERPO", "PPAGINA", "FPPAGINA", "FINPAGINA", "NEGRITA", "FINNEGRITA",
		"CURSIVA", "FINCURSIVA", "SUBRAYADO", "FINSUBRAYADO", "TACHADO", "FINTACHADO",
		"SUBINDICE", "FINSUBINDICE", "SUPERINDICE", "FINSUPERINDICE", "TAMANO",
		"FINTAMANO", "SANGRADO", "FINSANGRADO", "PARRAFO", "FINPARRAFO", "POSICION_KW",
		"FINPOSICION", "ID", "FINID", "CLASE", "FINCLASE", "LISTA", "FINLISTA",
		"ELEMENTOLISTA", "FINELEMENTOLISTA", "ENLACE", "FINENLACE", "CON", "FINCON",
		"MOSTRAR", "FINMOSTRAR", "IMAGEN", "FINIMAGEN", "SRC", "FINSRC", "ALT",
		"FINALT", "ENCABEZADO", "FINENCABEZADO", "LINEA", "SALTO", "ESTILO",
		"FINESTILO", "POSICION", "ATTR_VAL", "WS",
	}
	staticData.RuleNames = []string{
		"pagina", "cabecera", "titulo", "cuerpo", "pie", "elemento", "estilo",
		"formato", "atributo", "lista", "elementoLista", "enlace", "imagen",
		"encabezado", "singleton", "contenido",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// L5ParserInit initializes any static state used to implement L5Parser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewL5Parser(). You can call this function if you wish to initialize the static state ahead
// of time.
func L5ParserInit() {
	staticData := &L5ParserStaticData
	staticData.once.Do(l5ParserInit)
}

// NewL5Parser produces a new parser instance for the optional input antlr.TokenStream.
func NewL5Parser(input antlr.TokenStream) *L5Parser {
	L5ParserInit()
	this := new(L5Parser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &L5ParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "L5.g4"

	return this
}

// L5Parser tokens.
const (
	L5ParserEOF              = antlr.TokenEOF
	L5ParserPAGINA           = 1
	L5ParserCABECERA         = 2
	L5ParserTITULO           = 3
	L5ParserFINTITULO        = 4
	L5ParserFINCABECERA      = 5
	L5ParserCUERPO           = 6
	L5ParserFINCUERPO        = 7
	L5ParserPPAGINA          = 8
	L5ParserFPPAGINA         = 9
	L5ParserFINPAGINA        = 10
	L5ParserNEGRITA          = 11
	L5ParserFINNEGRITA       = 12
	L5ParserCURSIVA          = 13
	L5ParserFINCURSIVA       = 14
	L5ParserSUBRAYADO        = 15
	L5ParserFINSUBRAYADO     = 16
	L5ParserTACHADO          = 17
	L5ParserFINTACHADO       = 18
	L5ParserSUBINDICE        = 19
	L5ParserFINSUBINDICE     = 20
	L5ParserSUPERINDICE      = 21
	L5ParserFINSUPERINDICE   = 22
	L5ParserTAMANO           = 23
	L5ParserFINTAMANO        = 24
	L5ParserSANGRADO         = 25
	L5ParserFINSANGRADO      = 26
	L5ParserPARRAFO          = 27
	L5ParserFINPARRAFO       = 28
	L5ParserPOSICION_KW      = 29
	L5ParserFINPOSICION      = 30
	L5ParserID               = 31
	L5ParserFINID            = 32
	L5ParserCLASE            = 33
	L5ParserFINCLASE         = 34
	L5ParserLISTA            = 35
	L5ParserFINLISTA         = 36
	L5ParserELEMENTOLISTA    = 37
	L5ParserFINELEMENTOLISTA = 38
	L5ParserENLACE           = 39
	L5ParserFINENLACE        = 40
	L5ParserCON              = 41
	L5ParserFINCON           = 42
	L5ParserMOSTRAR          = 43
	L5ParserFINMOSTRAR       = 44
	L5ParserIMAGEN           = 45
	L5ParserFINIMAGEN        = 46
	L5ParserSRC              = 47
	L5ParserFINSRC           = 48
	L5ParserALT              = 49
	L5ParserFINALT           = 50
	L5ParserENCABEZADO       = 51
	L5ParserFINENCABEZADO    = 52
	L5ParserLINEA            = 53
	L5ParserSALTO            = 54
	L5ParserESTILO           = 55
	L5ParserFINESTILO        = 56
	L5ParserPOSICION         = 57
	L5ParserATTR_VAL         = 58
	L5ParserWS               = 59
)

// L5Parser rules.
const (
	L5ParserRULE_pagina        = 0
	L5ParserRULE_cabecera      = 1
	L5ParserRULE_titulo        = 2
	L5ParserRULE_cuerpo        = 3
	L5ParserRULE_pie           = 4
	L5ParserRULE_elemento      = 5
	L5ParserRULE_estilo        = 6
	L5ParserRULE_formato       = 7
	L5ParserRULE_atributo      = 8
	L5ParserRULE_lista         = 9
	L5ParserRULE_elementoLista = 10
	L5ParserRULE_enlace        = 11
	L5ParserRULE_imagen        = 12
	L5ParserRULE_encabezado    = 13
	L5ParserRULE_singleton     = 14
	L5ParserRULE_contenido     = 15
)

// IPaginaContext is an interface to support dynamic dispatch.
type IPaginaContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	PAGINA() antlr.TerminalNode
	Cabecera() ICabeceraContext
	Cuerpo() ICuerpoContext
	Pie() IPieContext
	FINPAGINA() antlr.TerminalNode

	// IsPaginaContext differentiates from other interfaces.
	IsPaginaContext()
}

type PaginaContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPaginaContext() *PaginaContext {
	var p = new(PaginaContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = L5ParserRULE_pagina
	return p
}

func InitEmptyPaginaContext(p *PaginaContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = L5ParserRULE_pagina
}

func (*PaginaContext) IsPaginaContext() {}

func NewPaginaContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PaginaContext {
	var p = new(PaginaContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = L5ParserRULE_pagina

	return p
}

func (s *PaginaContext) GetParser() antlr.Parser { return s.parser }

func (s *PaginaContext) PAGINA() antlr.TerminalNode {
	return s.GetToken(L5ParserPAGINA, 0)
}

func (s *PaginaContext) Cabecera() ICabeceraContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICabeceraContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICabeceraContext)
}

func (s *PaginaContext) Cuerpo() ICuerpoContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICuerpoContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICuerpoContext)
}

func (s *PaginaContext) Pie() IPieContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPieContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPieContext)
}

func (s *PaginaContext) FINPAGINA() antlr.TerminalNode {
	return s.GetToken(L5ParserFINPAGINA, 0)
}

func (s *PaginaContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PaginaContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PaginaContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(L5Listener); ok {
		listenerT.EnterPagina(s)
	}
}

func (s *PaginaContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(L5Listener); ok {
		listenerT.ExitPagina(s)
	}
}

func (p *L5Parser) Pagina() (localctx IPaginaContext) {
	localctx = NewPaginaContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, L5ParserRULE_pagina)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(32)
		p.Match(L5ParserPAGINA)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(33)
		p.Cabecera()
	}
	{
		p.SetState(34)
		p.Cuerpo()
	}
	{
		p.SetState(35)
		p.Pie()
	}
	{
		p.SetState(36)
		p.Match(L5ParserFINPAGINA)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ICabeceraContext is an interface to support dynamic dispatch.
type ICabeceraContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	CABECERA() antlr.TerminalNode
	Titulo() ITituloContext
	FINCABECERA() antlr.TerminalNode

	// IsCabeceraContext differentiates from other interfaces.
	IsCabeceraContext()
}

type CabeceraContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCabeceraContext() *CabeceraContext {
	var p = new(CabeceraContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = L5ParserRULE_cabecera
	return p
}

func InitEmptyCabeceraContext(p *CabeceraContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = L5ParserRULE_cabecera
}

func (*CabeceraContext) IsCabeceraContext() {}

func NewCabeceraContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CabeceraContext {
	var p = new(CabeceraContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = L5ParserRULE_cabecera

	return p
}

func (s *CabeceraContext) GetParser() antlr.Parser { return s.parser }

func (s *CabeceraContext) CABECERA() antlr.TerminalNode {
	return s.GetToken(L5ParserCABECERA, 0)
}

func (s *CabeceraContext) Titulo() ITituloContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITituloContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITituloContext)
}

func (s *CabeceraContext) FINCABECERA() antlr.TerminalNode {
	return s.GetToken(L5ParserFINCABECERA, 0)
}

func (s *CabeceraContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CabeceraContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CabeceraContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(L5Listener); ok {
		listenerT.EnterCabecera(s)
	}
}

func (s *CabeceraContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(L5Listener); ok {
		listenerT.ExitCabecera(s)
	}
}

func (p *L5Parser) Cabecera() (localctx ICabeceraContext) {
	localctx = NewCabeceraContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, L5ParserRULE_cabecera)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(38)
		p.Match(L5ParserCABECERA)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(39)
		p.Titulo()
	}
	{
		p.SetState(40)
		p.Match(L5ParserFINCABECERA)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITituloContext is an interface to support dynamic dispatch.
type ITituloContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	TITULO() antlr.TerminalNode
	Contenido() IContenidoContext
	FINTITULO() antlr.TerminalNode

	// IsTituloContext differentiates from other interfaces.
	IsTituloContext()
}

type TituloContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTituloContext() *TituloContext {
	var p = new(TituloContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = L5ParserRULE_titulo
	return p
}

func InitEmptyTituloContext(p *TituloContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = L5ParserRULE_titulo
}

func (*TituloContext) IsTituloContext() {}

func NewTituloContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TituloContext {
	var p = new(TituloContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = L5ParserRULE_titulo

	return p
}

func (s *TituloContext) GetParser() antlr.Parser { return s.parser }

func (s *TituloContext) TITULO() antlr.TerminalNode {
	return s.GetToken(L5ParserTITULO, 0)
}

func (s *TituloContext) Contenido() IContenidoContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IContenidoContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IContenidoContext)
}

func (s *TituloContext) FINTITULO() antlr.TerminalNode {
	return s.GetToken(L5ParserFINTITULO, 0)
}

func (s *TituloContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TituloContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TituloContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(L5Listener); ok {
		listenerT.EnterTitulo(s)
	}
}

func (s *TituloContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(L5Listener); ok {
		listenerT.ExitTitulo(s)
	}
}

func (p *L5Parser) Titulo() (localctx ITituloContext) {
	localctx = NewTituloContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, L5ParserRULE_titulo)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(42)
		p.Match(L5ParserTITULO)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(43)
		p.Contenido()
	}
	{
		p.SetState(44)
		p.Match(L5ParserFINTITULO)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ICuerpoContext is an interface to support dynamic dispatch.
type ICuerpoContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	CUERPO() antlr.TerminalNode
	FINCUERPO() antlr.TerminalNode
	AllElemento() []IElementoContext
	Elemento(i int) IElementoContext

	// IsCuerpoContext differentiates from other interfaces.
	IsCuerpoContext()
}

type CuerpoContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCuerpoContext() *CuerpoContext {
	var p = new(CuerpoContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = L5ParserRULE_cuerpo
	return p
}

func InitEmptyCuerpoContext(p *CuerpoContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = L5ParserRULE_cuerpo
}

func (*CuerpoContext) IsCuerpoContext() {}

func NewCuerpoContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CuerpoContext {
	var p = new(CuerpoContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = L5ParserRULE_cuerpo

	return p
}

func (s *CuerpoContext) GetParser() antlr.Parser { return s.parser }

func (s *CuerpoContext) CUERPO() antlr.TerminalNode {
	return s.GetToken(L5ParserCUERPO, 0)
}

func (s *CuerpoContext) FINCUERPO() antlr.TerminalNode {
	return s.GetToken(L5ParserFINCUERPO, 0)
}

func (s *CuerpoContext) AllElemento() []IElementoContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IElementoContext); ok {
			len++
		}
	}

	tst := make([]IElementoContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IElementoContext); ok {
			tst[i] = t.(IElementoContext)
			i++
		}
	}

	return tst
}

func (s *CuerpoContext) Elemento(i int) IElementoContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IElementoContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IElementoContext)
}

func (s *CuerpoContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CuerpoContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CuerpoContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(L5Listener); ok {
		listenerT.EnterCuerpo(s)
	}
}

func (s *CuerpoContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(L5Listener); ok {
		listenerT.ExitCuerpo(s)
	}
}

func (p *L5Parser) Cuerpo() (localctx ICuerpoContext) {
	localctx = NewCuerpoContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, L5ParserRULE_cuerpo)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(46)
		p.Match(L5ParserCUERPO)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(50)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&29309166244505600) != 0 {
		{
			p.SetState(47)
			p.Elemento()
		}

		p.SetState(52)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(53)
		p.Match(L5ParserFINCUERPO)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IPieContext is an interface to support dynamic dispatch.
type IPieContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	PPAGINA() antlr.TerminalNode
	Contenido() IContenidoContext
	FPPAGINA() antlr.TerminalNode

	// IsPieContext differentiates from other interfaces.
	IsPieContext()
}

type PieContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPieContext() *PieContext {
	var p = new(PieContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = L5ParserRULE_pie
	return p
}

func InitEmptyPieContext(p *PieContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = L5ParserRULE_pie
}

func (*PieContext) IsPieContext() {}

func NewPieContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PieContext {
	var p = new(PieContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = L5ParserRULE_pie

	return p
}

func (s *PieContext) GetParser() antlr.Parser { return s.parser }

func (s *PieContext) PPAGINA() antlr.TerminalNode {
	return s.GetToken(L5ParserPPAGINA, 0)
}

func (s *PieContext) Contenido() IContenidoContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IContenidoContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IContenidoContext)
}

func (s *PieContext) FPPAGINA() antlr.TerminalNode {
	return s.GetToken(L5ParserFPPAGINA, 0)
}

func (s *PieContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PieContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PieContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(L5Listener); ok {
		listenerT.EnterPie(s)
	}
}

func (s *PieContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(L5Listener); ok {
		listenerT.ExitPie(s)
	}
}

func (p *L5Parser) Pie() (localctx IPieContext) {
	localctx = NewPieContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, L5ParserRULE_pie)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(55)
		p.Match(L5ParserPPAGINA)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(56)
		p.Contenido()
	}
	{
		p.SetState(57)
		p.Match(L5ParserFPPAGINA)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IElementoContext is an interface to support dynamic dispatch.
type IElementoContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Estilo() IEstiloContext
	Formato() IFormatoContext
	Lista() IListaContext
	Enlace() IEnlaceContext
	Singleton() ISingletonContext
	Imagen() IImagenContext
	Encabezado() IEncabezadoContext

	// IsElementoContext differentiates from other interfaces.
	IsElementoContext()
}

type ElementoContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyElementoContext() *ElementoContext {
	var p = new(ElementoContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = L5ParserRULE_elemento
	return p
}

func InitEmptyElementoContext(p *ElementoContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = L5ParserRULE_elemento
}

func (*ElementoContext) IsElementoContext() {}

func NewElementoContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ElementoContext {
	var p = new(ElementoContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = L5ParserRULE_elemento

	return p
}

func (s *ElementoContext) GetParser() antlr.Parser { return s.parser }
